--- a/gpv.html
+++ b/gpv.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <h1>Sobre a empresa material de construção </h1>
+    <h1 style="text-align: center; background: #CCCCCC ">Sobre a empresa material de construção</h1>
 
     <p>Localizada no coração da cidade a <strong>material de construção</strong> traz para o mercado o que há de melhor para a sua casa e construções. 
     Fundada em 2019, a material de construção já é destaque na cidade e conquista novos clientes a cada dia.</p>
